--- a/v1/.env.example
+++ b/v1/.env.example
@@ -7,3 +7,5 @@ DB_CONNECTION=mysql
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_PASSWORD=
+GOOGLE_CLIENT_ID=clientId
+GOOGLE_CLIENT_SECRET=clientSecret
